# myBigInt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  myBigIntTests.cpp  myBigIntUnitTests  myBigIntUnitTests[1]_include.cmake  myBigIntUnitTests[1]_tests.cmake
Testing/Temporary/: CTestCostData.txt
myBigInt/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
myBigInt/include/: myBigInt.h
myBigInt/src/: myBigInt.cpp
